<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="title">正在准备中，请稍候</string>
    <string name="show_default">Show default dialog</string>
    <string name="show_styled">Show styled dialog</string>
    <string name="show_message">Show custom message dialog</string>
    <string name="school_title_name">学院通</string>
    <string name="back">返回</string>
    <string name="app_name">NoName</string><string name="send">发送</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="not_create_ap">您的设备不支持热点创建</string>

    <!-- 所有错误提示，都是以e_开头_hint结尾 -->
    <string name="e_username_hint">请输入正确的用户名</string>
    <string name="e_password_hint">请输入正确的密码</string>

    <!-- EditText Max Length -->
    <string name="max_length_username">12</string>
    <string name="max_length_password">12</string>

    <!-- 常规 -->
    <string name="edit_text_type">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="submit">Submit</string>

    <!-- LoginActivity -->
    <string name="login_title">Login</string>
    <string name="login_username_hint">Enter Username</string>
    <string name="login_password_hint">Enter Password</string>
    <string name="login_username_length_hint">Username length between 8 to 12</string>
    <string name="login_password_length_hint">Password length between 8 to 12</string>
    <string name="number">号码</string>
    <string name="select_contact">选择联系人</string>
    <string name="use_voice">单发</string>
    <string name="use_wifi">群发</string>
    <string name="sendingByVoice">\n声波传输中,请将两手机背面靠拢</string>
    <string name="receive_content">正在接受信息。。。</string>
    <string name="send_message">发送信息</string><string name="sendbyap">联系人信息群发中，请让对方打开接收功能</string><string name="receive_message">接受信息</string><string name="name">姓名</string>
    
    
    

</resources>